fix(api example): Table on mobile
- Fixed API Example's table layout on mobile

--- a/themes/hugo-docs/assets/elements/api-example.scss
+++ b/themes/hugo-docs/assets/elements/api-example.scss
@@ -33,11 +33,12 @@ $api-example-padding: $space-m;
 
   td {
     &:first-child {
-      white-space: nowrap;
+      hyphens: auto;
       width: 20%;
     }
 
     &:last-child {
+      hyphens: auto;
       width: 60%;
     }
   }
